# fb-bot

./: .gitignore  .replit  patch_ads_launch.py  patch_clickable_creatives.py  patch_creatives_plain.py  patch_fix.py  pnpm-lock.yaml  pnpm-workspace.yaml  privacy-policy.html  pyproject.toml  replit.md
.upm/: store.json
attached_assets/: Pasted-Add-a-new-automation-step-after-pricing-in-the-pricing-_1773664683602.txt  Pasted-Build-me-an-MVP-Telegram-bot-in-Python-for-product-rese_1773573536482.txt  Pasted-Create-a-new-Telegram-bot-dedicated-only-to-managing-da_1773776262344.txt  Pasted-Create-a-new-Telegram-bot-dedicated-to-pricing-approved_1773662323488.txt  Pasted-Create-a-new-Telegram-bot-for-READY-FOR-ADS-products-th_1773677131385.txt  Pasted-Create-a-second-Telegram-bot-to-moderate-products-from-_1773660247786.txt  Pasted-Disable-WEIGHT-extraction-completely-in-the-system-Curr_1773755191560.txt  Pasted-Do-not-change-the-currently-working-duplicate-detection_1773758754353.txt  Pasted-Do-not-change-the-currently-working-duplicate-detection_1773758786487.txt  Pasted-Extend-the-existing-Telegram-config-bot-with-these-new-_1773777940100.txt  Pasted-FB-ADS-LIBRARY-18-03-2026-20-25-Adele-hues-5-done-6-210_1773836844833.txt  Pasted-Fix-the-WEIGHT-extraction-logic-on-the-1688-sourcing-pa_1773754227275.txt  Pasted-Fix-the-architecture-of-the-existing-Telegram-config-bo_1773778613128.txt  Pasted-Fix-the-current-Meta-Ads-Library-clustering-logic-Curre_1773581780541.txt  Pasted-Fix-the-search-depth-logic-in-the-current-bot-Current-p_1773654001912.txt  (+18 more)
telegram-bot/: .env.example  (+62 more)
(+6 files in other folders)
